# Visual-processing

./: .gitlab-ci.yml  .lfsconfig  .rosinstall  README.md
algebra_libraries/eigen_helper_functions/: CTestTestfile.cmake  Makefile  (+1 more)
apriltag/: transform_camera_to_world.py
flexbotics_cr7ial_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
flexbotics_cr7ial_moveit_config_2/: .setup_assistant  CMakeLists.txt  package.xml
flexbotics_cr7ial_moveit_config_3/: .setup_assistant  CMakeLists.txt  package.xml
flexbotics_cr7ial_moveit_config_5/: .setup_assistant  CMakeLists.txt  package.xml
flexbotics_cr7ial_moveit_config_6/: .setup_assistant  CMakeLists.txt  package.xml
flexbotics_cr7ial_moveit_config_gazebo/: .setup_assistant  CMakeLists.txt  package.xml
flexbotics_cr7ial_support/: CMakeLists.txt  package.xml
flexbotics_cr7ial_support/config/: manipulator_commander.yaml  manipulator_controller.yaml
flexbotics_cr7ial_support/launch/: cr7ial_scene.rviz  set_up_cr7ial_scene.launch  set_up_cr7ial_scene.launch.save  set_up_cr7ial_scene.launch.save.1  set_up_cr7ial_scene_2.launch
flexbotics_cr7ial_support/meshes/: scan_blend_end_effector_lowres.stl  scan_blend_end_effector_simplified.stl
flexbotics_cr7ial_support/meshes/collision/: PhoXi_XS.c.STL
flexbotics_cr7ial_support/meshes/visual/: PhoXi_XS.f.STL  PhoXi_XS.f.stl
flexbotics_cr7ial_support/urdf/: PhoXi3Dscanner.xacro  PhoXi3Dscanner_macro.xacro  PhoXi3Dscanner_values.xacro  cr7ial_scan_blend_eff_macro.xacro  cr7ial_scene.urdf.xacro
visual_processing/: CMakeLists.txt  frames.gv  package.xml
(+207 files in other folders)
